<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_double"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_app_use_case"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_use_case"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_no_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_permission"
        android:layout_marginTop="@dimen/spacing_double"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@id/text_app_use_case" />

    <Button
        android:id="@+id/button_no_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_double"
        android:text="@string/give_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_no_permission" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_no_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_no_permission,button_no_permission"
        tools:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_code"
        app:layout_constraintBottom_toTopOf="@id/text_code"
        app:layout_constraintEnd_toEndOf="@id/text_code"
        app:layout_constraintStart_toStartOf="@id/text_code" />

    <TextView
        android:id="@+id/text_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CodeTextViewStyle"
        android:text="@string/no_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_no_permission"
        tools:text="123456" />

</androidx.constraintlayout.widget.ConstraintLayout>